[package]
name = "rp-zbus"
version = "0.1.0"
edition = "2021"
authors = ["Amidamaru <ardtimeit@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
tokio = { version = "1.33.0", features = ["full"] }
zbus = { version = "3.14.1", features = ["tokio"] }
